--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header class="navbar">
-        <h1 class="title1">HeyTopik</h1>
+        <h1 class="title1">Hey</h1>
         <ul class="nav-ul">
               <li class="nav-li"><a href="index.html" class="nav-a">Inicio</a></li>
               <li class="nav-li"><a href="sobre.html" class="nav-a">Rotas</a></li>
